--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@types/gifencoder": "^2.0.3",
+    "canvas": "^2.11.2",
     "frog": "latest",
+    "gifencoder": "^2.0.1",
     "hono": "^4"
   },
   "devDependencies": {
